// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test EngraveDpiSlider should render correctly in high dpi 1`] = `
<div>
  <div>
    Dummy FormItem
    <p>
      props: 
      {"label":"Resolution"}
    </p>
    <div>
      Dummy Row
      <p>
        props: 
        {}
      </p>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":16}
        </p>
        <div>
          Dummy Slider
          <p>
            props: 
            {"min":0,"max":3,"value":2}
          </p>
          <button
            type="button"
          >
            change
          </button>
        </div>
      </div>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":8}
        </p>
        <div>
          Dummy Input
          <p>
            props: 
            {"value":"High (500 DPI)","disabled":true}
          </p>
          <p>
            ref: 
            null
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test EngraveDpiSlider should render correctly in low dpi 1`] = `
<div>
  <div>
    Dummy FormItem
    <p>
      props: 
      {"label":"Resolution"}
    </p>
    <div>
      Dummy Row
      <p>
        props: 
        {}
      </p>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":16}
        </p>
        <div>
          Dummy Slider
          <p>
            props: 
            {"min":0,"max":3,"value":0}
          </p>
          <button
            type="button"
          >
            change
          </button>
        </div>
      </div>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":8}
        </p>
        <div>
          Dummy Input
          <p>
            props: 
            {"value":"Low (100 DPI)","disabled":true}
          </p>
          <p>
            ref: 
            null
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test EngraveDpiSlider should render correctly in medium dpi 1`] = `
<div>
  <div>
    Dummy FormItem
    <p>
      props: 
      {"label":"Resolution"}
    </p>
    <div>
      Dummy Row
      <p>
        props: 
        {}
      </p>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":16}
        </p>
        <div>
          Dummy Slider
          <p>
            props: 
            {"min":0,"max":3,"value":1}
          </p>
          <button
            type="button"
          >
            change
          </button>
        </div>
      </div>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":8}
        </p>
        <div>
          Dummy Input
          <p>
            props: 
            {"value":"Medium (250 DPI)","disabled":true}
          </p>
          <p>
            ref: 
            null
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test EngraveDpiSlider should render correctly in ultra dpi 1`] = `
<div>
  <div>
    Dummy FormItem
    <p>
      props: 
      {"label":"Resolution"}
    </p>
    <div>
      Dummy Row
      <p>
        props: 
        {}
      </p>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":16}
        </p>
        <div>
          Dummy Slider
          <p>
            props: 
            {"min":0,"max":3,"value":3}
          </p>
          <button
            type="button"
          >
            change
          </button>
        </div>
      </div>
      <div>
        Dummy Col
        <p>
          props: 
          {"span":8}
        </p>
        <div>
          Dummy Input
          <p>
            props: 
            {"value":"Ultra High (1000 DPI)","disabled":true}
          </p>
          <p>
            ref: 
            null
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
